gazelle/kotlin/tests/gazelle_disable/expectedStdout.txt
main.kt parse error(s):
     1: ('No Imports!')
                   ^
     1: 'N
                    ^
